removed some extraneous code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       }; 
       
       socket.onmessage = function (message) {
-        console.log("in: " + message.data);
+        console.log("receiving: " + message.data);
       };
 
       socket.onclose = function(){
